- fixed bug in lp.c SCIProwGetObjParallelism due to a wrong parallelism value which arised from cancellations during calculation of squared euclidean norm of objective function vector of column variables
- fixed bug when aborting pricing with Ctrl-C
- fixed bug when deleting a constraint where the update was delayed and not processed yet (in cons.c)

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.<c/h>)
- added heuristic zirounding (heur_zirounding.{c,h})
- new separator rapid learning (sepa_rapidlearning.{c,h}) that produces conflicts, global bound changes, primal solutions and initializes inference values for branching
- added propagator for variable lower and upper bounds (prop_vbound.{c,h}); adjusted cons_varbound.c, var.c, and, implics.c to work correctly with the new propagator
- added heuristic twoopt (heur_twoopt.{c,h})
- added Chvatal-Gomory cuts separated with a sub-MIP (sepa_cgmip.{c|h})
- added reader for "Weigted Boolean Optimization" - problems (reader_wbo.{c,h}), this reader needs the reader_opb files
- added interface to CppAD (nlpi/exprinterpret_cppad.cpp)
- new separator oddcycle (sepa_oddcycle.{c,h}) separates oddcycle inequalities using the implication/conflict graph and dijkstra-algorithm based on binary heaps (dijkstra/dijkstra_bh.{c,h})

parameters: 
- added parameter <misc/usesmalltables> which results in using smaller tables for names, cliques and cuts and improves the
  performace for smaller instances, default value FALSE 
- added parameter <misc/usevartable> and <misc/useconstable> which turns on/off the usage of hashtables mapping from 
  variable/constraint names to the variables/constraints; when turned off, SCIPfindVar() and SCIPfindCons() may not be used; 
  the hashtables can be turned off for subMIPs to improve the performance, default value TRUE