@@ -252,6 +252,7 @@ fixed bugs:
 - fixed bug in lp.c SCIProwGetObjParallelism due to a wrong parallelism value which arised from cancellations during calculation of squared euclidean norm of objective function vector of column variables
 - fixed bug when aborting pricing with Ctrl-C
 - fixed bug when deleting a constraint where the update was delayed and not processed yet (in cons.c)
+- fixed bug in solve.c where relaxation branching candidates were cleared, but the relaxation was still marked solved and not called again, furthermore, adjusted criterions for solving a relaxation again
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
